--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 								<section class="4u"> <a href="#" class="image featured"><img src="images/plx.jpg" alt=""></a>
 									<div class="box">
 										<a href="#" class="button">Episode 1</a>
-										<p>This was the lunch and hosted at UB Business Block on the 29th Feb 2016.</p>
+										<p>This was the launch and hosted at UB Business Block on the 29th Feb 2016.</p>
 										</div>
 								</section>
 								<section class="4u"> <a href="#" class="image featured"><img src="images/pitchlinkx.jpg" alt=""></a>
